Fix linewrap issue profession line.

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ html {
 .profession {
 	font-weight: lighter;
 	font-size: 1.04rem;
+    width: 20em;
 }
 
 .front-links {
